      The difference is that ARMY_ROUT_HITS_INDIVIDUAL tracks each hitpoint
      individually and the army routs if the total damage done is more
      than 1/2 the total number of hits.  This means (say you have a dragon
      and a mage (for a total of 51 hits)) that the army will rout if the
      dragon takes 26 hits even though neither unit might actually have
      died.  The other option, ARMY_ROUT_HITS_FIGURE only subtracts the hits
      from the total when the figure actually is killed, so in the example
      of 1 mage and 1 dragon, the battle would continue until the dragon
      was dead, regardless of when (or if) the mage was killed.
   -- Added RangeType setup to make ranges customizable. This should make
      the Lacandon spells fully implementable.
   -- The CLEAR_SKIES castable at range stuff is now doable by setting the
      rangeIndex on S_CLEAR_SKIES to RANGE_CLEAR_SKIES and then modifying
	  the values for RANGE_CLEAR_SKIES.
   -- Fixed planar scaling so that all levels were scaled to what they should
      be, not always *2 for levels other than surface.
   -- Fixed a bug which caused a crash in the orders checker if you had a
      bogus form order and did NOT have either an ENDFORM of #END order in
	  your orderset after that bogus form.
   -- Fixed a bug which caused a crash if you built a road in a direction
      where there was no adjacent hex.
   -- Fixed a bug in unit drowning when they left a boat.
   -- Fixed a bug in combat where the rules and code differed.  Code now
      follows the rules.
   -- Fixed a bug in display of info about shield effects generated by items.
   -- Fixed bug in forlist during assassination which caused assassinations
      to stop if the person you assassinated was directly below you in the
	  unit list in the object.
   -- Tom Alsen added code to Blitzgame allowing monsters to regenerate hits
      during combat.  I have merged this code into the main base under a
	  configuration option.