@@ -16,6 +16,7 @@ Karl Castle
 Stephen Baillie
     Pointed out bugs in the easier underworld code and the improved
     farsight code.
+	Implemented multiple taxation options controlling who could tax.
 Jon Bagshaw
     Working with Stefan on Lacandon Conquest
 Tom Alsen (aka Tzarg)
